# swagger-mcp

./: pyproject.toml
.innocody/integrations.d/: mcp_stdio_test.yaml
src/swagger_mcp/: endpoint_invoker.py  openapi_mcp_server.py  openapi_parser.py  server_arg_parser.py  simple_endpoint.py
