[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swagger-mcp"
version = "0.3.0"
description = "Automatically convert a Swagger/OpenAPI specification into an MCP server"
authors = [{name = "Context Labs"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "PyYAML",
    "mcp",
    "fastmcp",
    "fastapi",
    "uvicorn",
    "streamlit",
]

[project.scripts]
swagger-mcp = "swagger_mcp.openapi_mcp_server:main"
swagger-mcp-parse-dry-run = "swagger_mcp.parse_dry_run:main"
swagger-mcp-ui = "swagger_mcp.ui_server:main"

[tool.setuptools]
include-package-data = true

[tool.uv.sources]
swagger-mcp = { workspace = true }

[dependency-groups]
dev = [
    "swagger-mcp",
]

